--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EV3projects-0.1.0-SNAPSHOT">
+    <wb-module deploy-name="LejosProject-0.1.0-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="EV3projects"/>
-        <property name="java-output-path" value="/EV3projects/build/classes"/>
+        <property name="context-root" value="LejosProject"/>
+        <property name="java-output-path" value="/LejosProject/build/classes"/>
     </wb-module>
 </project-modules>
